# sea-orm-insertion-failure

./: Cargo.toml  README.md  create-database.sh  destroy-database.sh  docker-db.yml
src/: main.rs
src/entities/: mod.rs  unit_state.rs
