[package]
name = "sea-orm-insertion-failure"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.69"
sea-orm = {version = "0.12.0-rc.3", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros", "with-time", "with-uuid", "with-json" ]}
sea-orm-migration = "0.12.0-rc.3"
time = "0.3.22"
tokio = { version = "1.29.1", features = ["full"] }
